--- a/src/main/webapp/WEB-INF/pages/header.html
+++ b/src/main/webapp/WEB-INF/pages/header.html
@@ -6,9 +6,9 @@
 			</div>
 			<ul class="nav navbar-nav">
 				<li><a href="index.jsp">Home</a></li>
-				<li><a href="pages/gallery.jsp">Gallery</a></li>
-				<li><a href="pages/poems.jsp">Poems</a></li>
-				<li><a href="pages/aboutUs.html">About Us</a></li>
+				<li><a href="WEB-INF/pages/gallery.jsp">Gallery</a></li>
+				<li><a href="WEB-INF/pages/poems.jsp">Poems</a></li>
+				<li><a href="WEB-INF/pages/aboutUs.html">About Us</a></li>
 			</ul>
 			<form class="form-inline" style="float: right; line-height: 50px;">
 				<span style="color: #777;">Search </span>
