--- a/src/main/webapp/WEB-INF/pages/header.html
+++ b/src/main/webapp/WEB-INF/pages/header.html
@@ -2,7 +2,7 @@
 	<nav class="navbar navbar-default">
 		<div class="container-fluid">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="#" style="font-family:cursive;">AmgArt</a>
+				<a class="navbar-brand" href="" style="font-family:cursive;">AmgArt</a>
 			</div>
 			<ul class="nav navbar-nav">
 				<li><a href="index.jsp">Home</a></li>
@@ -10,10 +10,10 @@
 				<li><a href="WEB-INF/pages/poems.jsp">Poems</a></li>
 				<li><a href="WEB-INF/pages/aboutUs.html">About Us</a></li>
 			</ul>
-			<form class="form-inline" style="float: right; line-height: 50px;">
+			<form action="/site/Search" method="GET" class="form-inline" style="float: right; line-height: 50px;">
 				<span style="color: #777;">Search </span>
 				<div class="form-group" style="line-height: 5px;">
-			  		<input type="text" id="search" name="search" class="form-control input-sm">
+			  		<input type="text" id="search" name="filename" class="form-control input-sm">
 				</div>
 			</form>
 				<!-- <li>Search <input type="text" class="form-control"></li> -->
