Cleaned up unneeded code.

--- a/src/main/webapp/WEB-INF/pages/header.html
+++ b/src/main/webapp/WEB-INF/pages/header.html
@@ -5,7 +5,7 @@
 				<a class="navbar-brand" href="" style="font-family:cursive;">AmgArt</a>
 			</div>
 			<ul class="nav navbar-nav">
-				<li><a href="index.jsp">Home</a></li>
+				<li><a href="/site">Home</a></li>
 				<li><a href="WEB-INF/pages/gallery.jsp">Gallery</a></li>
 				<li><a href="WEB-INF/pages/poems.jsp">Poems</a></li>
 				<li><a href="WEB-INF/pages/aboutUs.html">About Us</a></li>
